hphp/hack/test/typecheck/xhp_no_children_declarations/has_decl.php.exp
File "has_decl.php", line 6, characters 12-12:
XHP children declarations are no longer supported. (Parsing[1002])
