hphp/hack/test/typecheck/xhp_no_children_declarations/has_decl.php
<?hh // strict

interface bar {}

class :foo {
  children (bar);
}
